--- a/Caja_Medicos/Caja_Medicos.vbproj
+++ b/Caja_Medicos/Caja_Medicos.vbproj
@@ -139,6 +139,12 @@
     <Compile Include="frmPermisos.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="frmPruebaEdgar.Designer.vb">
+      <DependentUpon>frmPruebaEdgar.vb</DependentUpon>
+    </Compile>
+    <Compile Include="frmPruebaEdgar.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="mdiPrincipal.designer.vb">
       <DependentUpon>mdiPrincipal.vb</DependentUpon>
     </Compile>
@@ -190,6 +196,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frmPermisos.resx">
       <DependentUpon>frmPermisos.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmPruebaEdgar.resx">
+      <DependentUpon>frmPruebaEdgar.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="mdiPrincipal.resx">
       <DependentUpon>mdiPrincipal.vb</DependentUpon>
