--- a/Caja_Medicos/Caja_Medicos.vbproj
+++ b/Caja_Medicos/Caja_Medicos.vbproj
@@ -139,6 +139,12 @@
     <Compile Include="frmPermisos.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="mdiPrincipal.Designer.vb">
+      <DependentUpon>mdiPrincipal.vb</DependentUpon>
+    </Compile>
+    <Compile Include="mdiPrincipal.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="mdiPrincipalold.designer.vb">
       <DependentUpon>mdiPrincipalold.vb</DependentUpon>
     </Compile>
@@ -190,6 +196,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frmPermisos.resx">
       <DependentUpon>frmPermisos.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="mdiPrincipal.resx">
+      <DependentUpon>mdiPrincipal.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="mdiPrincipalold.resx">
       <DependentUpon>mdiPrincipalold.vb</DependentUpon>
